#user-profile photo out of bounds fix

--- a/app/assets/stylesheets/kairos.css.scss
+++ b/app/assets/stylesheets/kairos.css.scss
@@ -145,10 +145,13 @@ ul.comments {
 // users/show
 #user-profile {
   min-height: 300px;
-  max-width: 700px;
   #user-labels {
     width: 300px;
   }
+}
+
+#user-profile, .tab-content-container, .tab-content-container-fixed {
+  max-width: 750px;
 }
 
 .nav-tabs-container {
@@ -158,7 +161,6 @@ ul.comments {
 .tab-content-container, .tab-content-container-fixed {
   background-color: #FFFFFF;
   padding: 20px;
-  max-width: 700px;
   max-height: 500px;
   overflow: scroll;
 }
